Fixes: Fixed UI flickering bug, C4 randomness, precache and autoclose bug, added spawning ammo and tried to fix edge-case in voice chat (#304)
* Fix shop flickering

* Fixed flickering

* Moved Hints tick method execution clientside

* Fixed not spawning ammo

* Autoclose C4 menu when moving away

* Added non-precached particle to precache

* Fixed C4 randomness (logical error)

* Fixed C4 not despawn when new round begins

* Attempt to fix #161

* Suppress error caused by sbox internally

--- a/code/ui/alivehud/c4/C4Arm.scss
+++ b/code/ui/alivehud/c4/C4Arm.scss
@@ -8,6 +8,8 @@ C4Arm {
     justify-content: center;
     align-items: center;
 
+    z-index: 50;
+
     .content-container {
         position: absolute;
         flex-direction: column;
